--- a/templates/layout.html
+++ b/templates/layout.html
@@ -75,6 +75,17 @@
     {% block body %}{% endblock %}
     
     <!-- Chatbot widget -->
-    <script src="https://chatrace.com/webchat/plugin.js?v=5"></script><script>ktt10.setup({id:"7MnEL878PJD",accountId:"1383334",color:"#006dff"})</script>
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "-qBmMWmmgN2Ap1vBUXCjF",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="-qBmMWmmgN2Ap1vBUXCjF"
+        domain="www.chatbase.co"
+        defer>
+        </script>
 </body>
 </html>
