--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,19 @@
 
 {% block body %}
 
-<h1>Transcript</h1>
+    <form action="/record" method="post" enctype="multipart/form-data" class="container-transcript">
+        
+        <div class="title2">
+            <h1>Transcript</h1>
+        </div>
 
-<form action="/record" method="post" enctype="multipart/form-data">
-    <p>Please upload your transcript:</p>
-    <input type="file" name="transcript" accept=".doc,.docx,.pdf" required />
-    <button type="submit">Submit</button>
-</form>
+        <div class="btns">
+            <input type="file" name="transcript" accept=".doc,.docx,.pdf" required />
+            <button class="btn" type="submit"><strong>Submit</strong></button>
+        </div>
+
+        
+    </form>
 
 {% endblock %}
 
