--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <div class="container">
         
         <div class="title1 ubuntu-bold">
-            <h1>Discover Your Path with Zaara</h1>
+            <h1>Discover Your Path with Zarra</h1>
         </div>
         
         <div class="academic-section">
