--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
 
             <div class="description">
                 <p>
-                    Don't know what's next?We got you.Our team has recently developed an module specifically trained to analyze 8-4-4 transcripts and provide Major recommendations.Upload your transcript and head over to your chat box to check it out!
+                    Our team has developed a tool that analyzes 8-4-4 transcripts and recommends majors. Simply upload your transcript and check the recommendations in your chat box.
                 </p>
             </div>
             
