--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,13 +50,13 @@
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script>
         window.embeddedChatbotConfig = {
-        chatbotId: "-qBmMWmmgN2Ap1vBUXCjF",
+        chatbotId: "Exw3SAjqWrCcdyXUcGTnK",
         domain: "www.chatbase.co"
         }
         </script>
         <script
         src="https://www.chatbase.co/embed.min.js"
-        chatbotId="-qBmMWmmgN2Ap1vBUXCjF"
+        chatbotId="Exw3SAjqWrCcdyXUcGTnK"
         domain="www.chatbase.co"
         defer>
         </script>
